--- a/src/components/snackBar/snackbar.css
+++ b/src/components/snackBar/snackbar.css
@@ -3,7 +3,7 @@
     height: 80px;
     border-radius: 25px;
     padding: 15px;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     left: 50%;
     transform: translateX(-50%);
@@ -15,7 +15,7 @@
 
 .Snackbar button{
     text-transform: uppercase;
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     background: transparent;
     border: none;
@@ -32,5 +32,5 @@
     color: #ce2f59;
 }
 .Snackbar .hide{
-    transform: translateY(-100%);
+    display: none;
 }
